--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "babel-node index.js"
-  },
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "7.9.0",
-    "npm": "4.6.1"
+    "node": "7.9.0"
   },
   "dependencies": {
     "babel-cli": "^6.0.0",
